<resources>
    <string name="app_name">Mis Contactos</string>
    <string name="nombre">Carlos Contreras</string>
    <string name="telefono">3214502145</string>
    <string name="email">carlos21@gmail.com</string>
    <string name="nacimiento">15/9/2020</string>
    <string name="descripcion">parque</string>
    <string name="pnombre">nombre</string>
    <string name="ptelefono">telefono</string>
    <string name="pemail">email</string>
    <string name="pnacimiento">nacimiento</string>
    <string name="pdescripcion">descripcion</string>
</resources>