<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:background="@color/colorPrimaryLight"
    tools:context=".DetalleContacto">

    <TextView
        android:id="@+id/tvConfirmarDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirmar datos"
        android:textColor="@color/PrimaryText"
        android:textSize="@dimen/tamañoformulario"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/PrimaryText"
        android:text="@string/nombre"
        android:textColor="@color/PrimaryText"
        android:textSize="23dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fecha de nacimiento:"
            android:textStyle="bold"
            android:textSize="@dimen/tamañoformulario"
            android:textColor="@color/PrimaryText" />

        <TextView
            android:id="@+id/tvNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/nacimiento"
            android:textColor="@color/PrimaryText"
            android:textSize="@dimen/tamañoformulario" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tamañoformulario"
            android:text="Tel:"
            android:textColor="@color/PrimaryText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/PrimaryText"
            android:text="@string/telefono"
            android:textColor="@color/PrimaryText"
            android:textSize="@dimen/datoscontacto" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="e-mail:"
            android:textSize="20dp"
            android:textColor="@color/PrimaryText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/PrimaryText"
            android:text="@string/email"
            android:textColor="@color/PrimaryText"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Descripción:"
            android:textStyle="bold"
            android:textSize="@dimen/tamañoformulario"
            android:textColor="@color/PrimaryText"
            />

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:textColor="@color/PrimaryText"
            android:textSize="@dimen/tamañoformulario"
            android:layout_marginLeft="5dp"
             />
    </LinearLayout>

    <Button
        android:id="@+id/btnEditar"
        android:layout_marginTop="60dp"
        android:textSize="@dimen/tamañoformulario"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Editar Datos"
        android:background="@drawable/button_style"
        />

</androidx.appcompat.widget.LinearLayoutCompat>